# DailyNews

./: .gitignore  AGENTS.md  CACHE_FEATURE_SUMMARY.md  CATEGORY_TIERED_FILTERING.md  CLASSIFY_LLM_CONFIG.md  CLAUDE.md  HEADLINE_BLACKLIST_IMPROVEMENTS.md  HEADLINE_IMPORTANCE_SCORING.md  HEADLINE_LIMIT_CONFIG.md  HEADLINE_SYSTEM_OVERVIEW.md  LLM_COST_OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  QUICK_START.md  README.md  REALTIME_SETUP.md  RUSSIA_FILTER_EXPLAINED.md  TESTING_GUIDE.md  TEST_README.md  diagnose_classify.py  pyproject.toml  standalone_test.py  test_alert_email.html  test_classify_llm.py  test_cost_optimization.py  test_cost_optimization_simple.py  test_smart_watermark.py  test_tiered_filtering.py
config/: __init__.py  settings.py
ingestion/: RSSclient.py  __init__.py
krio_tests/: BUGFIX_SUMMARY.md  CACHE_IMPLEMENTATION_SUMMARY.md  CACHE_QUICK_REFERENCE.md  CACHE_TEST_REPORT.md  CACHE_USAGE_GUIDE.md  CHECKLIST.md  DEBUG_LINKS.md  FINAL_FIXES.md  HEADLINE_CONFIG_HOURLY.md  HEADLINE_LLM_LEARNING.md  HEADLINE_SQRT_SCALING.md  HTML_STYLING_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LINK_FIX_SUMMARY.md  NEWS_CACHE_FEATURE.md  REALTIME_WHISTLE_BUGFIX.md  WHISTLE_LINK_FIX.md  WHISTLE_LINK_FIX_SUMMARY.md  WHISTLE_LINK_FIX_V2.md  check_docker_network.sh  diagnose_env.py  diagnose_links.py  diagnose_whistle_links.py  quick_test.py  standalone_test.py  test_alert_email.html  test_blacklist_improvements.py  test_cache_integration.py  test_connection.py  test_headline_learning.py  test_html_link.html  test_html_link.py  test_html_styling.py  (+10 more)
(+33 files in other folders)
